# smartthings-device-example

./: README.md
thermostat/: CMakeLists.txt  main.c  run.sh  stdkconfig.cmake
wallpad/: iterate.py  run.sh  stop.sh
